# archivist-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HF_README.md  README.md  app_hf.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archivist/: __init__.py  __main__.py  cli.py  config.py
archivist/core/: __init__.py  embedder.py  indexer.py  onnx_embedder.py  onnx_exporter.py  searcher.py  store.py
archivist/features/: __init__.py  autotag.py  duplicates.py  organizer.py  watcher.py
archivist/ui/: __init__.py  app.py
tests/: test_indexer.py  test_searcher.py  test_store.py
